Improve docker build/experience
This change aligns docker build methods to be more generic,
more closely aligned with fabric.git, and allows the resulting
docker image to be more turnkey (it includes demo config/keys).

Change-Id: Ifc7213bf7d3c74355e7013c09d5621b6cc06f54e
Signed-off-by: Greg Haskins <gregory.haskins@gmail.com>

--- a/images/cop/Dockerfile.in
+++ b/images/cop/Dockerfile.in
@@ -1,7 +1,7 @@
 FROM hyperledger/fabric-cop-runtime:_TAG_
 ENV COP_HOME /etc/hyperledger/fabric-cop
-RUN mkdir -p /etc/hyperledger/fabric-cop
-COPY payload/fabric-cop /usr/local/bin
-RUN mv /usr/local/bin/fabric-cop /usr/local/bin/cop
+RUN mkdir -p $COP_HOME /var/hyperledger/fabric-cop
+COPY payload/cop /usr/local/bin
+ADD payload/sampleconfig.tar.bz2 $COP_HOME
 EXPOSE 8888
-CMD cop
+CMD cop server start -address 0.0.0.0 -config $COP_HOME/cop.json
