--- a/docker/docker-compose-cop.yml
+++ b/docker/docker-compose-cop.yml
@@ -1,5 +1,5 @@
 cop:
-   image: fabric-cop:latest
+   image: hyperledger/fabric-cop
    ports:
      - "8888:8888"
    environment:
@@ -7,39 +7,39 @@ cop:
      - CA_KEY_CERTIFICATE=${CA_KEY_CERTIFICATE}
      - COP_CONFIG=${COP_CONFIG}
    volumes:
-     - /config:/var/hyperledger/cop_config
-     - /root/.cop:/var/hyperledger/fabric/.cop
-   command: sh -c 'cop server start -ca ~/.cop/$CA_CERTIFICATE -ca-key ~/.cop/$CA_KEY_CERTIFICATE -config /config/$COP_CONFIG -address "0.0.0.0"'
+     - /etc/hyperledger/fabric-cop:/var/hyperledger/fabric-cop/config
+     - /.cop:/var/hyperledger/fabric/.cop
+   command: sh -c 'sleep 1;cop server start -ca /.cop/$CA_CERTIFICATE -ca-key /.cop/$CA_KEY_CERTIFICATE -config /etc/hyperledger/fabric-cop/$COP_CONFIG -address "0.0.0.0"'
 
 admin-client:
-   image: fabric-cop:latest
+   image: hyperledger/fabric-cop
    environment:
      - CSR_CONFIG=${CSR_CONFIG}
    volumes:
-     - /config:/var/hyperledger/cop_config
-     - /root/.cop:/var/hyperledger/fabric/.cop
-   command: sh -c "sleep 5;cop client enroll admin adminpw http://cop:8888 /config/$CSR_CONFIG"
+     - /etc/hyperledger/fabric-cop:/var/hyperledger/fabric-cop/config
+     - /.cop:/var/hyperledger/fabric/.cop
+   command: sh -c "sleep 5;cop client enroll admin adminpw http://cop:8888 /etc/hyperledger/fabric-cop/$CSR_CONFIG"
    links:
      - cop
 
 sdk-client:
-   image: fabric-cop:latest
+   image: hyperledger/fabric-cop
    environment:
      - CSR_CONFIG=${CSR_CONFIG}
    volumes:
-     - /config:/var/hyperledger/cop_config
-     - /root/.cop:/var/hyperledger/fabric/.cop
-   command: sh -c "sleep 5;cop client enroll sdk sdkpw http://cop:8888 /config/$CSR_CONFIG"
+     - /etc/hyperledger/fabric-cop:/var/hyperledger/fabric-cop/config
+     - /.cop:/var/hyperledger/fabric/.cop
+   command: sh -c "sleep 5;cop client enroll sdk sdkpw http://cop:8888 /etc/hyperledger/fabric-cop/$CSR_CONFIG"
    links:
      - cop
 
 bob-client:
-   image: fabric-cop:latest
+   image: hyperledger/fabric-cop
    environment:
      - CSR_CONFIG=${CSR_CONFIG}
    volumes:
-     - /config:/var/hyperledger/cop_config
-     - /root/.cop:/var/hyperledger/fabric/.cop
-   command: sh -c "sleep 5;cop client enroll bob bobpw http://cop:8888 /config/$CSR_CONFIG"
+     - /etc/hyperledger/fabric-cop:/var/hyperledger/fabric-cop/config
+     - /.cop:/var/hyperledger/fabric/.cop
+   command: sh -c "sleep 5;cop client enroll bob bobpw http://cop:8888 /etc/hyperledger/fabric-cop/$CSR_CONFIG"
    links:
      - cop
