FAB-1338: Fix configs after rename
This updates the configs such that the server
and client can connect.

Change-Id: Ie7e8f66109daed90a720e7dac28651b9b487e4a9
Signed-off-by: Latitia M Haskins <latitia.haskins@gmail.com>

--- a/docker/.env
+++ b/docker/.env
@@ -1,4 +1,4 @@
 CA_CERTIFICATE=ec.pem
 CA_KEY_CERTIFICATE=ec-key.pem
-FABRIC_CA_CONFIG=config.json
+FABRIC_CA_CONFIG=server-config.json
 CSR_CONFIG=csr.json
