--- a/images/fabric-ca/config/client-config.json
+++ b/images/fabric-ca/config/client-config.json
@@ -1,5 +1,5 @@
 {
-"ca_certfiles":["/root/.fabric-ca/root.pem"],
-"client":{"keyfile":"/root/.fabric-ca/tls_client-key.pem",
-    "certfile":"/root/.fabric-ca/tls_client-cert.pem"}
+"ca_certfiles":["/.fabric-ca/root.pem"],
+"client":{"keyfile":"/.fabric-ca/tls_client-key.pem",
+    "certfile":"/.fabric-ca/tls_client-cert.pem"}
 }
