[FAB-1652] Use fabric-baseos instead of busybox
Change-Id: I72a75b2bbba32d05aad0d93ccda084fe8e16c334
Signed-off-by: Greg Haskins <gregory.haskins@gmail.com>

--- a/images/fabric-ca/Dockerfile.in
+++ b/images/fabric-ca/Dockerfile.in
@@ -1,4 +1,4 @@
-FROM hyperledger/fabric-ca-runtime:_TAG_
+FROM hyperledger/fabric-baseos:_BASE_TAG_
 ENV FABRIC_CA_HOME /etc/hyperledger/fabric-ca
 RUN mkdir -p $FABRIC_CA_HOME /var/hyperledger/fabric-ca
 COPY payload/fabric-ca /usr/local/bin
