Fix the config path env variable
The config path env is now named a `FABRIC_CA_HOME`, rename it to
`CA_CFG_PATH` to keep aligned with fabric (PEER_CFG_PATH and
ORDERER_CFG_PATH).

Change-Id: I6219d428d250031fe19b6b8857c59998ea18657b
Signed-off-by: Baohua Yang <yangbaohua@gmail.com>

--- a/images/fabric-ca/Dockerfile.in
+++ b/images/fabric-ca/Dockerfile.in
@@ -1,10 +1,10 @@
 FROM hyperledger/fabric-baseos:_BASE_TAG_
-ENV FABRIC_CA_HOME /etc/hyperledger/fabric-ca
-RUN mkdir -p $FABRIC_CA_HOME /var/hyperledger/fabric-ca
+ENV CA_CFG_PATH /etc/hyperledger/fabric-ca
+RUN mkdir -p $CA_CFG_PATH /var/hyperledger/fabric-ca
 COPY payload/fabric-ca /usr/local/bin
 
 # Copy the configuration files
-ADD payload/sampleconfig.tar.bz2 $FABRIC_CA_HOME
+ADD payload/sampleconfig.tar.bz2 $CA_CFG_PATH
 
 # Copy the same certificates that are currently hardcoded into the peers
 COPY payload/root.pem /.fabric-ca/root.pem
@@ -14,4 +14,4 @@ COPY payload/ec-key.pem /.fabric-ca/ec-key.pem
 COPY payload/ec.pem /.fabric-ca/ec.pem
 
 EXPOSE 7054
-CMD fabric-ca server start -address 0.0.0.0 -config $FABRIC_CA_HOME/server-config.json
+CMD fabric-ca server start -address 0.0.0.0 -config $CA_CFG_PATH/server-config.json
