--- a/images/fabric-ca-fvt/Dockerfile.in
+++ b/images/fabric-ca-fvt/Dockerfile.in
@@ -45,6 +45,9 @@ RUN touch /usr/local/bin/docker && chmod 777 /usr/local/bin/docker
 # Use python2, not 3
 RUN ln -s /usr/bin/python2.7 /usr/local/bin/python && chmod 777 /usr/local/bin/python
 
+# Generate version-agnostic postgres command
+RUN ln -s /usr/lib/postgresql/$PGVER/bin/postgres /usr/local/bin/postgres && chmod 777 /usr/local/bin/postgres
+
 # Clean up APT when done.
 RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 COPY payload/start.sh /start.sh
