Replace group with affiliation for users
Convert "group" to "affiliation" in the users table.
Affiliation path will have the whole group hierarchy
represented for each user.

https://jira.hyperledger.org/browse/FAB-1511

Change-Id: If4674bf113391aff815216dcc0c695d9adcfd00d
Signed-off-by: Saad Karim <skarim@us.ibm.com>

--- a/testdata/fabric-ca-client-config.yaml
+++ b/testdata/fabric-ca-client-config.yaml
@@ -75,7 +75,7 @@ csr:
 id:
   name: testRegister
   type: user
-  group: bank_a
+  affiliation: banks.bank_a
   attributes:
     - name: hf.Revoker
       value: true
