Affiliation table clean up
The affiliation table in fabric-ca-server's DB should contain
two columns: name and prekey.

Fixed some logic to handle a comma separate list of root certs.

More Info: https://jira.hyperledger.org/browse/FAB-2573

Change-Id: I0f13e1a46bd982c4e2b4457675607e4ecec3e1a2
Signed-off-by: Saad Karim <skarim@us.ibm.com>

--- a/testdata/fabric-ca-client-config.yaml
+++ b/testdata/fabric-ca-client-config.yaml
@@ -44,8 +44,8 @@ tls:
   # Enable TLS (default: false)
   enabled: false
 
-  # TLS for the client's listenting port (default: false)
-  certfiles: root.pem   # Comma Separated (e.g. root.pem, root2.pem)
+  # TLS for the client's listenting port
+  certfiles: root.pem   # Comma Separated list of root certificate files (e.g. root.pem, root2.pem)
   client:
     certfile: tls_client-cert.pem
     keyfile: tls_client-key.pem
