--- a/images/fabric-ca-fvt/Dockerfile.in
+++ b/images/fabric-ca-fvt/Dockerfile.in
@@ -1,3 +1,8 @@
+#
+# Copyright IBM Corp. All Rights Reserved.
+#
+# SPDX-License-Identifier: Apache-2.0
+#
 FROM hyperledger/fabric-baseimage:_BASE_TAG_
 
 ENV DEBIAN_FRONTEND noninteractive
