--- a/images/fabric-ca/Dockerfile.in
+++ b/images/fabric-ca/Dockerfile.in
@@ -1,3 +1,8 @@
+#
+# Copyright IBM Corp. All Rights Reserved.
+#
+# SPDX-License-Identifier: Apache-2.0
+#
 FROM hyperledger/fabric-baseos:_BASE_TAG_
 ENV FABRIC_CA_HOME /etc/hyperledger/fabric-ca-server
 RUN mkdir -p $FABRIC_CA_HOME /var/hyperledger/fabric-ca-server
