--- a/testdata/ca/intermediateca/ca2/fabric-ca-server-config.yaml
+++ b/testdata/ca/intermediateca/ca2/fabric-ca-server-config.yaml
@@ -1,3 +1,8 @@
+#
+# Copyright IBM Corp. All Rights Reserved.
+#
+# SPDX-License-Identifier: Apache-2.0
+#
 #############################################################################
 # The CA section contains information specific to this Certificate Authority.
 # Minimally, the name must be unique for all CAs serviced by the same server.
