--- a/testdata/fabric-ca-client-config.yaml
+++ b/testdata/fabric-ca-client-config.yaml
@@ -1,4 +1,9 @@
 
+#
+# Copyright IBM Corp. All Rights Reserved.
+#
+# SPDX-License-Identifier: Apache-2.0
+#
 #############################################################################
 #   This is a configuration file for the fabric-ca-client command.
 #
