--- a/docker/.env
+++ b/docker/.env
@@ -1,3 +1,8 @@
+#
+# Copyright IBM Corp. All Rights Reserved.
+#
+# SPDX-License-Identifier: Apache-2.0
+#
 CA_CERTIFICATE=ec.pem
 CA_KEY_CERTIFICATE=ec-key.pem
 FABRIC_CA_CONFIG=server-config.json
