--- a/docker/server/docker-compose.yml
+++ b/docker/server/docker-compose.yml
@@ -1,3 +1,8 @@
+#
+# Copyright IBM Corp. All Rights Reserved.
+#
+# SPDX-License-Identifier: Apache-2.0
+#
 fabric-ca-server:
    image: hyperledger/fabric-ca
    container_name: fabric-ca-server
