--- a/images/fabric-ca-peer/Dockerfile.in
+++ b/images/fabric-ca-peer/Dockerfile.in
@@ -5,5 +5,9 @@
 #
 FROM hyperledger/fabric-peer:_FABRIC_TAG_
 COPY payload/fabric-ca-client /usr/local/bin
+ARG FABRIC_CA_DYNAMIC_LINK=false
 RUN chmod +x /usr/local/bin/fabric-ca-client
 RUN apt-get update && apt-get install -y netcat && rm -rf /var/cache/apt
+
+# libraries needed when image is built dynamically
+RUN if [ "$FABRIC_CA_DYNAMIC_LINK" = "true" ]; then apt-get install -y libltdl-dev; fi
