[FAB-8451] Fix certificate close to expire
Addresses certificate in fabric-ca/testdata
that is about expire

Change-Id: I48136fa9371988021ccc4e6586efc11006454b8a
Signed-off-by: Saad Karim <skarim@us.ibm.com>

--- a/.gitignore
+++ b/.gitignore
@@ -9,5 +9,6 @@ testdata/fabric*ca.db
 testdata/initFabricCaFvt.json
 testdata/openssl.cnf.base.this
 testdata/runFabricCaFvt.json
+testdata/ec_cert.pem
 fabric-ca
 vendor/github.com/cloudflare/cfssl/vendor/github.com/cloudflare/cfssl_trust/ca-bundle/http:*.crt
