FAB-9194 Add tox.ini for building docs in CI
Add tox.ini and supporting files in fabric-ca to support
the fabric-ca rtd-verify-job to build documentation on .md
and .rst changes.

Change-Id: Ic8726a786f0b362e10facfcabf9b94aa7778414f
Signed-off-by: rameshthoomu <rameshbabu.thoomu@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@ fabric-ca
 /release/linux-ppc64le
 /release/windows-amd64
 vendor/github.com/cloudflare/cfssl/vendor/github.com/cloudflare/cfssl_trust/ca-bundle/http:*.crt
+# tox
+.tox/
