FABC-735 Move to Alpine
- fabric-ca image now uses Alpine.

- cleaned up fabric-ca-fvt image
to use multistage builds. It still uses
fabric-baseimage because it's a very
complex image.  Will look to change in the
future.

Change-Id: Ia7866c8d704b1062782b13b54a072c0037c7a032
Signed-off-by: Gari Singh <gari.r.singh@gmail.com>

--- a/images/fabric-ca-fvt/Dockerfile
+++ b/images/fabric-ca-fvt/Dockerfile
@@ -3,7 +3,22 @@
 #
 # SPDX-License-Identifier: Apache-2.0
 #
-FROM _NS_/fabric-baseimage:_BASE_TAG_
+ARG BASEIMAGE_RELEASE
+FROM hyperledger/fabric-baseimage:${BASEIMAGE_RELEASE} as fabric-ca-builder
+ARG GO_LDFLAGS
+ARG GO_TAGS
+
+ADD . ${GOPATH}/src/github.com/hyperledger/fabric-ca
+RUN go build -tags "${GO_TAGS}" -ldflags "${GO_LDFLAGS}" \
+	-o /usr/local/bin/fabric-ca-server \
+	github.com/hyperledger/fabric-ca/cmd/fabric-ca-server \
+	&& go build -tags "${GO_TAGS}" -ldflags "${GO_LDFLAGS}" \
+	-o /usr/local/bin/fabric-ca-client \
+	github.com/hyperledger/fabric-ca/cmd/fabric-ca-client;
+
+
+FROM hyperledger/fabric-baseimage:${BASEIMAGE_RELEASE}
+ARG PG_VER
 
 ENV PATH="/usr/local/go/bin/:${PATH}" \
     DEBIAN_FRONTEND="noninteractive" \
@@ -13,7 +28,7 @@ ENV PATH="/usr/local/go/bin/:${PATH}" \
     PGPASSWORD="postgres" \
     PGSSLCERT="/etc/hyperledger/fabric-ca/FabricTlsClientEEcert.pem" \
     PGSSLKEY="/etc/hyperledger/fabric-ca/FabricTlsClientEEkey.pem" \
-    PGVER=_PGVER_ \
+    PGVER=${PG_VER} \
     HOSTADDR="127.0.0.1" \
     LDAPPORT="389" \
     LDAPUSER="admin" \
@@ -27,31 +42,32 @@ ENV PATH="/usr/local/go/bin/:${PATH}" \
     MYSQLDATA=/var/lib/mysql
 
 # setup scripts for slapd, postgres, mysql, and openssl
-ADD payload/fabric-ca-fvt.tar.bz2 $FABRIC_CA_DATA
-RUN chmod +x $FABRIC_CA_DATA/*sh
-RUN cd $FABRIC_CA_DATA
+COPY --from=fabric-ca-builder \
+	${GOPATH}/src/github.com/hyperledger/fabric-ca/images/fabric-ca-fvt/payload \
+	${FABRIC_CA_DATA}
+RUN chmod +x ${FABRIC_CA_DATA}/*sh
+RUN cd ${FABRIC_CA_DATA}
 RUN $FABRIC_CA_DATA/tls_pki.sh
-RUN chmod 600 $FABRIC_CA_DATA/$TLS_SERVER_KEY
-RUN chmod 600 $FABRIC_CA_DATA/$TLS_CLIENT_KEY
+RUN chmod 600 ${FABRIC_CA_DATA}/${TLS_SERVER_KEY}
+RUN chmod 600 ${FABRIC_CA_DATA}/${TLS_CLIENT_KEY}
 
 # Avoid ERROR:
 #   invoke-rc.d: policy-rc.d denied execution of start.
 RUN echo "#!/bin/sh\nexit 0" > /usr/sbin/policy-rc.d
 
-RUN $FABRIC_CA_DATA/system_update.sh
-RUN $FABRIC_CA_DATA/postgres_setup.sh
-RUN $FABRIC_CA_DATA/slapd_setup.sh
-RUN $FABRIC_CA_DATA/mysql_setup.sh
+RUN ${FABRIC_CA_DATA}/system_update.sh
+RUN ${FABRIC_CA_DATA}/postgres_setup.sh
+RUN ${FABRIC_CA_DATA}/slapd_setup.sh
+RUN ${FABRIC_CA_DATA}/mysql_setup.sh
 
 # Install fabric-ca dependencies
 RUN go get github.com/go-sql-driver/mysql
 RUN go get github.com/lib/pq
 
 # Add docker-built execs for (potentially) alternative architecture
-COPY payload/fabric-ca-client payload/fabric-ca-server /usr/local/bin/
-RUN chmod +x /usr/local/bin/fabric-ca-client /usr/local/bin/fabric-ca-server
+COPY --from=fabric-ca-builder /usr/local/bin /usr/local/bin
 
 WORKDIR ${GOPATH}/src/github.com/hyperledger/fabric-ca
-RUN cp $FABRIC_CA_DATA/start.sh /
+RUN cp ${FABRIC_CA_DATA}/start.sh /
 ENTRYPOINT [ "/start.sh" ]
 CMD ["make", "fvt-tests"]
