--- a/ci.properties
+++ b/ci.properties
@@ -4,8 +4,8 @@ FAB_BASE_VERSION=2.0.0
 FAB_BASEIMAGE_VERSION=0.4.15
 # Pull below list of images from Hyperledger Docker Hub
 FAB_THIRDPARTY_IMAGES_LIST=kafka zookeeper couchdb
-# Set compaitable go version
-GO_VER=1.12.5
+# Set compatible go version
+GO_VER=1.12.9
 # Pull below list of images from nexus3 for e2e tests
 FAB_IMAGES_LIST=javaenv nodeenv
 # Set related rocketChat channel name. Default: jenkins-robot
