--- a/ci/azp-pipeline.yml
+++ b/ci/azp-pipeline.yml
@@ -14,30 +14,24 @@ pr:
 
 variables:
   GOPATH: $(Agent.BuildDirectory)/go
-  PATH: $(Agent.BuildDirectory)/go/bin:/bin:/usr/bin:/sbin:/usr/sbin:/usr/local/bin:/usr/local/sbin
-  GOVER: 1.12.5
+  PATH: $(Agent.BuildDirectory)/go/bin:$(Agent.BuildDirectory)/go/src/github.com/hyperledger/fabric-ca/build/tools:/bin:/usr/bin:/sbin:/usr/sbin:/usr/local/bin:/usr/local/sbin
+  GOVER: 1.12.9
 
 jobs:
 - job: VerifyBuild
   pool:
     vmImage: ubuntu-16.04
-  dependsOn: []
-  timeoutInMinutes: 60
   steps:
   - template: install_deps.yml
-  - script: go get golang.org/x/tools/cmd/goimports
-    displayName: Download goimports
   - checkout: self
     path: 'go/src/github.com/hyperledger/fabric-ca'
     displayName: Checkout Fabric CA Code
-  - script: make dist-all unit-test int-tests docs
+  - script: make dist-all checks all-tests docs
     displayName: Run Unit and Integration Tests
 
 - job: FVTTests
   pool:
     vmImage: ubuntu-16.04
-  dependsOn: []
-  timeoutInMinutes: 60
   steps:
   - template: install_deps.yml
   - checkout: self
@@ -51,8 +45,6 @@ jobs:
 - job: DocBuild
   pool:
     vmImage: ubuntu-16.04
-  dependsOn: []
-  timeoutInMinutes: 60
   steps:
   - script: sudo apt-get clean && sudo apt-get update && sudo apt-get install -y python-minimal tox
     displayName: Install Tox
