[FABCI-457] Make MySQL standalone container
Remove the service installation of MySQL
from the FVT image and pull it out as a standalone
container, allowing us to manage the MySQL version
via docker, rather than depending on the existence
of MySQL in the debian repo.

Signed-off-by: Brett Logan <Brett.T.Logan@ibm.com>

--- a/images/fabric-ca-fvt/Dockerfile
+++ b/images/fabric-ca-fvt/Dockerfile
@@ -33,7 +33,7 @@ ENV PATH="/usr/local/go/bin/:${PATH}" \
     TLS_SERVER_KEY=FabricTlsServerEEkey.pem \
     TLS_CLIENT_CERT=FabricTlsClientEEcert.pem \
     TLS_CLIENT_KEY=FabricTlsClientEEkey.pem \
-    MYSQLDATA=/var/lib/mysql
+    MYSQLHOST="MySQL_Server_5.7.27_Auto_Generated_Server_Certificate"
 
 RUN apt-get clean && apt-get update && apt-get install openssl -y
 
@@ -51,7 +51,6 @@ RUN echo "#!/bin/sh\nexit 0" > /usr/sbin/policy-rc.d
 
 RUN ${FABRIC_CA_DATA}/system_update.sh
 RUN ${FABRIC_CA_DATA}/slapd_setup.sh
-RUN ${FABRIC_CA_DATA}/mysql_setup.sh
 
 COPY --from=fabric-ca-builder /usr/local/go /usr/local
 
