[FABCI-468] Remove fabric-baseimage
Signed-off-by: Brett Logan <Brett.T.Logan@ibm.com>

--- a/ci/azp-pipeline.yml
+++ b/ci/azp-pipeline.yml
@@ -12,9 +12,20 @@ pr:
 - release-2.*
 - release-1.4
 
+resources:
+  containers:
+  - container: mysql
+    image: mysql:5.7
+    env:
+      MYSQL_ROOT_PASSWORD: mysql
+  - container: postgres
+    image: postgres:11
+    env:
+      POSTGRES_PASSWORD: postgres
+
 variables:
   GOPATH: $(Agent.BuildDirectory)/go
-  PATH: $(Agent.BuildDirectory)/go/bin:$(Agent.BuildDirectory)/go/src/github.com/hyperledger/fabric-ca/build/tools:/bin:/usr/bin:/sbin:/usr/sbin:/usr/local/bin:/usr/local/sbin
+  PATH: $(Agent.BuildDirectory)/go/bin:$(Agent.BuildDirectory)/go/src/github.com/hyperledger/fabric-ca/build/tools:/usr/local/go/bin:/bin:/usr/bin:/sbin:/usr/sbin:/usr/local/bin:/usr/local/sbin
   GOVER: 1.12.9
 
 jobs:
@@ -30,14 +41,21 @@ jobs:
     displayName: Run Unit and Integration Tests
 
 - job: FVTTests
+  services:
+    mysql: mysql
+    postgres: postgres
   pool:
     vmImage: ubuntu-16.04
+  container:
+    image: hlfdev/debian:latest
+  variables:
+    PGPASSWORD: postgres
   steps:
   - template: install_deps.yml
   - checkout: self
     path: 'go/src/github.com/hyperledger/fabric-ca'
     displayName: Checkout Fabric CA Code
-  - script: make fvt-tests
+  - script: make fvt-tests-ci
     displayName: Run FVT Tests
 
 - job: DocBuild
