--- a/ci/azure-pipelines-merge.yml
+++ b/ci/azure-pipelines-merge.yml
@@ -3,10 +3,10 @@
 # SPDX-License-Identifier: Apache-2.0
 
 name: $(SourceBranchName)-$(Date:yyyyMMdd)$(Rev:.rrr)
-trigger: none
-pr:
+trigger:
   - master
   - release-2.*
+pr: none
 
 variables:
   GOPATH: $(Agent.BuildDirectory)/go
