--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,4 +1,5 @@
 # SPDX-License-Identifier: Apache-2.0
 
 # Fabric CA Maintainers
-*	@christo4ferris @denyeart @JonathanLevi @mastersingh24 @saad-karim @smithbk @sykesm
+*       @hyperledger/fabric-ca-maintainers
+/docs/  @hyperledger/fabric-core-doc-maintainers @hyperledger/fabric-ca-maintainers
