--- a/testdata/fabric-ca-client-config.yaml
+++ b/testdata/fabric-ca-client-config.yaml
@@ -30,7 +30,7 @@
 #   For example, see "certfile" and "keyfile" in the "ca" section.
 #   The value of each filename element can be a simple filename, a
 #   relative path, or an absolute path.  If the value is not an
-#   absolute path, it is interpretted as being relative to the location
+#   absolute path, it is interpreted as being relative to the location
 #   of this configuration file.
 #
 #############################################################################
