--- a/ci/azure-pipelines-release.yml
+++ b/ci/azure-pipelines-release.yml
@@ -78,7 +78,7 @@ stages:
               addChangeLog: true
               assets: $(Pipeline.Workspace)/*amd64*/*
               compareWith: lastFullRelease
-              gitHubConnection: fabric-ca-release
+              gitHubConnection: hyperledger
               isDraft: true
               releaseNotesFile: release_notes/v$(RELEASE).md
               repositoryName: $(Build.Repository.Name)
