--- a/ci/azure-pipelines.yml
+++ b/ci/azure-pipelines.yml
@@ -10,23 +10,47 @@ pr:
 
 variables:
   GOPATH: $(Agent.BuildDirectory)/go
-  PATH: $(Agent.BuildDirectory)/go/bin:$(Agent.BuildDirectory)/go/src/github.com/hyperledger/fabric-ca/build/tools:/bin:/usr/bin:/sbin:/usr/sbin:/usr/local/bin:/usr/local/sbin
+  # PATH: $(Agent.BuildDirectory)/go/bin:$(Agent.BuildDirectory)/go/src/github.com/hyperledger/fabric-ca/build/tools:/bin:/usr/bin:/sbin:/usr/sbin:/usr/local/bin:/usr/local/sbin
   GOVER: 1.15.7
+  RELEASE: 1.5.1
 
 jobs:
-- job: VerifyBuild
+# - job: VerifyBuild
+#   pool:
+#     vmImage: ubuntu-16.04
+#   steps:
+#   - template: install_deps.yml
+#   - checkout: self
+#     path: 'go/src/github.com/hyperledger/fabric-ca'
+#     displayName: Checkout Fabric CA Code
+#   - script: make dist-all checks all-tests docs
+#     displayName: Run Unit and Integration Tests
+#   - publish: 'release'
+#     displayName: 'built binaries'
+    
+- job: Build
   pool:
     vmImage: ubuntu-16.04
+  container: golang:$(GOVER)
+  strategy:
+    matrix:
+      Linux-amd64:
+        TARGET: linux-amd64
+      MacOS-amd64:
+        TARGET: darwin-amd64
+      Windows-amd64:
+        TARGET: windows-amd64
   steps:
-  - template: install_deps.yml
-  - checkout: self
-    path: 'go/src/github.com/hyperledger/fabric-ca'
-    displayName: Checkout Fabric CA Code
-  - script: make dist-all checks all-tests docs
-    displayName: Run Unit and Integration Tests
-  - publish: 'release'
-    displayName: 'built binaries'
-    
+    - checkout: self
+      path: 'go/src/github.com/hyperledger/fabric-ca'
+      displayName: Checkout Fabric CA Code
+    - script: make dist/$(TARGET)
+      displayName: Compile Binary and Create Tarball
+    - publish: release/$(TARGET)/hyperledger-fabric-ca-$(TARGET)-$(RELEASE).tar.gz
+      artifact: hyperledger-fabric-ca-$(TARGET)-$(RELEASE).tar.gz
+      displayName: Publish Release Artifact
+
+
 - job: FVTTests
   pool:
     vmImage: ubuntu-16.04
