--- a/ci/azure-pipelines.yml
+++ b/ci/azure-pipelines.yml
@@ -16,7 +16,7 @@ variables:
 jobs:
 - job: VerifyBuild
   pool:
-    vmImage: ubuntu-16.04
+    vmImage: ubuntu-latest
   steps:
   - template: install_deps.yml
   - checkout: self
@@ -27,7 +27,7 @@ jobs:
 
 - job: FVTTests
   pool:
-    vmImage: ubuntu-16.04
+    vmImage: ubuntu-latest
   steps:
   - template: install_deps.yml
   - checkout: self
@@ -38,7 +38,7 @@ jobs:
 
 - job: DocBuild
   pool:
-    vmImage: ubuntu-16.04
+    vmImage: ubuntu-latest
   container:
     image: n42org/tox:3.4.0
   steps:
