--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -33,7 +33,7 @@ jobs:
           go-version: ${{ env.GO_VER }}
       - uses: actions/checkout@v3
         name: Checkout Fabric CA Code
-      - run: make dist-all checks all-tests docs
+      - run: make dist checks all-tests docs
         name: Run Unit and Integration Tests
   fvt-tests:
     name: FVT Tests
