--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -33,8 +33,13 @@ jobs:
           go-version: ${{ env.GO_VER }}
       - uses: actions/checkout@v3
         name: Checkout Fabric CA Code
-      - run: make dist checks all-tests docs
-        name: Run Unit and Integration Tests
+      - name: Run source checks
+        run: make checks
+      - name: Build docs
+        run: make docs
+      - name: Run unit and integration tests
+        run: make all-tests
+
   fvt-tests:
     name: FVT Tests
     runs-on: ubuntu-20.04
