--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -3,7 +3,7 @@
 #
 # SPDX-License-Identifier: Apache-2.0
 #
-python-markdown-math==0.2
+
 
 alabaster==0.7.13
 Babel==2.12.1
@@ -34,6 +34,6 @@ sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.5
 sphinxcontrib-websupport==1.2.4
-typing-extensions==4.7.1
-urllib3==1.26.16
+typing_extensions==4.7.1
+urllib3==1.26.17
 zipp==3.15.0
