--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,39 +1,38 @@
-#
-# Copyright IBM Corp. All Rights Reserved.
-#
-# SPDX-License-Identifier: Apache-2.0
-#
-
-
-alabaster==0.7.13
-Babel==2.12.1
-certifi==2023.7.22
-charset-normalizer==3.2.0
+alabaster==0.7.16
+Babel==2.14.0
+certifi==2023.11.17
+charset-normalizer==3.3.2
 commonmark==0.9.1
-docutils==0.17.1
-idna==3.4
+docutils==0.20.1
+idna==3.6
 imagesize==1.4.1
 importlib-metadata==6.7.0
-Jinja2==3.0.3
+Jinja2==3.1.3
+markdown-it-py==3.0.0
 MarkupSafe==2.1.3
-packaging==23.1
-Pygments==2.15.1
+mdit-py-plugins==0.4.0
+mdurl==0.1.2
+myst-parser==2.0.0
+packaging==23.2
+Pygments==2.17.2
 python-markdown-math==0.2
 pytz==2023.3
+PyYAML==6.0.1
+readthedocs-sphinx-ext==2.2.5
 recommonmark==0.7.1
 requests==2.31.0
 six==1.16.0
 snowballstemmer==2.2.0
-Sphinx==1.8.6
-sphinx-rtd-theme==0.1.9
-sphinxcontrib-applehelp==1.0.2
-sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-htmlhelp==2.0.0
+Sphinx==7.2.6
+sphinx-rtd-theme==2.0.0
+sphinxcontrib-applehelp==1.0.8
+sphinxcontrib-devhelp==1.0.6
+sphinxcontrib-htmlhelp==2.0.5
 sphinxcontrib-jquery==4.1
 sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.3
-sphinxcontrib-serializinghtml==1.1.5
+sphinxcontrib-qthelp==1.0.7
+sphinxcontrib-serializinghtml==1.1.10
 sphinxcontrib-websupport==1.2.4
 typing_extensions==4.7.1
-urllib3==1.26.18
+urllib3==2.1.0
 zipp==3.15.0
