Update runners used to build release binaries
macOS 13 runners used to build the amd64 binaries care now retired. This
change replaces both the macOS and the Windows runners with the latest
generally available versions.

Signed-off-by: Mark S. Lewis <Mark.S.Lewis@outlook.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,11 +27,11 @@ jobs:
             platform: linux-amd64
           - image: ubuntu-22.04
             platform: linux-arm64
-          - image: macos-14
+          - image: macos-latest
             platform: darwin-arm64
-          - image: macos-13
+          - image: macos-15-intel
             platform: darwin-amd64
-          - image: windows-2022
+          - image: windows-latest
             platform: windows-amd64
     runs-on: ${{ matrix.image }}
     steps:
